--- a/src/sections/Body/Projects.astro
+++ b/src/sections/Body/Projects.astro
@@ -4,6 +4,28 @@ import Title from "../../components/Title.astro";
 
 const projects = [
   {
+    id: 0o1,
+    title: "Bimetica",
+    description:
+      "Esta es sitio web para una empresa comprometida en proporcionar servicios de diseño y construcción de alta calidad que estan orientados a satisfacer las necesidades de sus clientes y contribuir al desarrollo del país.",
+    url: "https://bimetica.vercel.app/",
+    image:
+      "https://github.com/ignaccio7/nirodev/blob/master/public/projects/bimetica.png?raw=true",
+    code: "",
+    // tag:IconHTML,
+  },
+  {
+    id: 0o2,
+    title: "Techtricks",
+    description:
+      "Este proyecto es un blog multipersonal que permitira publicar articulos a mas de una persona segun el superadministrador apruebe el articulo que publico antes",
+    url: "https://techtricks.space/",
+    image:
+      "https://github.com/ignaccio7/nirodev/blob/master/public/projects/techtricks.png?raw=true",
+    code: "https://github.com/ignaccio7/PostsArticulos",
+    // tag:IconHTML,
+  },
+  {
     id: 1,
     title: "CashFlow",
     description:
