--- a/src/sections/Body/Projects.astro
+++ b/src/sections/Body/Projects.astro
@@ -12,6 +12,7 @@ const projects = [
     image:
       "https://github.com/ignaccio7/nirodev/blob/master/public/projects/bimetica.png?raw=true",
     code: "",
+    dev: true,
     // tag:IconHTML,
   },
   {
@@ -23,6 +24,7 @@ const projects = [
     image:
       "https://github.com/ignaccio7/nirodev/blob/master/public/projects/techtricks.png?raw=true",
     code: "https://github.com/ignaccio7/PostsArticulos",
+    dev: true,
     // tag:IconHTML,
   },
   {
@@ -45,6 +47,7 @@ const projects = [
     image:
       "https://github.com/ignaccio7/nirodev/blob/master/public/projects/design-patterns.png?raw=true",
     code: "https://github.com/ignaccio7/PatronesDeDisenioJSTS",
+    dev: true,
     // tag:IconHTML,
   },
   {
